# ha-toss-invest

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: build_release.py  validate_release_tag.py
.github/workflows/: compatibility.yaml  release.yaml  test.yaml  validate.yaml
blueprints/automation/: toss_invest_alert.yaml
brand/toss_invest/: README.md
custom_components/toss_invest/: __init__.py  alerts.py  binary_sensor.py  button.py  calculations.py  config_flow.py  const.py  coordinator.py  entity.py  event.py  manifest.json  market_entities.py  models.py  sensor.py  strings.json  switch.py
custom_components/toss_invest/api/: __init__.py  auth.py  client.py  rate_limit.py
dashboards/: README.md  toss-invest-enhanced.yaml  toss-invest-native.yaml
dev/: README.md  compose.yaml  configuration.yaml  secrets.yaml.example
docs/: configuration.md  privacy.md  recorder.md  troubleshooting.md
docs/verification/: 2026-07-13-v0.1.0.md
tests/: __init__.py  conftest.py  test_advanced_coordinator.py  test_alerts.py  test_binary_sensor.py  test_calculations.py  test_config_flow.py  test_controls.py  test_coordinator.py  test_dev_compose.py  test_documentation.py  test_event.py  test_fixtures_are_sanitized.py  test_init.py  test_manifest.py  test_market_entities.py  test_models.py  test_sensor.py  test_yaml_artifacts.py
tests/api/: test_auth.py  test_client.py  test_rate_limit.py
tests/fixtures/: accounts.json  candles.json  holdings.json  market.json  prices.json  warnings.json
(+4 files in other folders)
