[project]
name = "toss-invest"
version = "0.1.0"
description = "Home Assistant integration for the Toss Securities Open API"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-homeassistant-custom-component",
    "aioresponses",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["custom_components.toss_invest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.14"
packages = ["custom_components.toss_invest"]
